--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -1,14 +1,18 @@
 name: learn-github-actions
 run-name: ${{ github.actor }} is learning GitHub Actions
-on: [push]
+on:
+  push:
+    branches:
+      - main
+    
 jobs:
-  check-bats-version:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '14'
-      - run: npm install -g bats
-      - run: bats -v
+  build:
+    runs-on:
+      -self-hosted
+      - hardware
+      -esp32
 
+      steps:
+          name: ESP IDF Build
+          run: docker run --rm -v $PWD:/project -w /project espressif/esp-idf latest_idf_v5.1.1 /bin/bash -c "export IDF_TARGET=esp32; idf.py fullclean; idf.py set-target esp32; idf.py build"
+          shell: bash
