--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -1,4 +1,4 @@
-name: learn-github-actions
+name: Build
 run-name: ${{ github.actor }} is learning GitHub Actions
 on:
   push:
@@ -8,11 +8,11 @@ on:
 jobs:
   build:
     runs-on:
-      -self-hosted
+      - self-hosted
       - hardware
-      -esp32
+      - esp32
 
-      steps:
-          name: ESP IDF Build
-          run: docker run --rm -v $PWD:/project -w /project espressif/esp-idf latest_idf_v5.1.1 /bin/bash -c "export IDF_TARGET=esp32; idf.py fullclean; idf.py set-target esp32; idf.py build"
-          shell: bash
+    steps:
+      - name: ESP IDF Build
+        run: docker run --rm -v $PWD:/project -w /project espressif/esp-idf latest_idf_v5.1.1 /bin/bash -c "export IDF_TARGET=esp32; idf.py fullclean; idf.py set-target esp32; idf.py build"
+        shell: bash
