--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v2
         
     - name: Setup ESP-IDF
-      uses: espressif/setup-esp-idf@v5
+      uses: espressif/esp-idf@v5
       with:
         esp-idf-version: 'v5.1'
         
