--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -44,4 +44,4 @@ jobs:
       with:
         esp_idf_version: v4.4
         target: esp32
-        path: 'learn-github-actions/'
+        # path: 'learn-github-actions/'
