--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -5,30 +5,6 @@ on:
     branches:
       - main
     
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
-
-#     steps:
-#     - name: Echeckout repository
-#       uses: actions/checkout@v2
-        
-#     - name: Setup ESP-IDF
-#       uses: espressif/esp-idf@v4.3
-#       with:
-#         esp-idf-version: 'v4.3'
-        
-#     - name: Configure Target
-#       run: |
-#         idf.py set-target esp32
-#         idf.py fullclean
-#     - name: Build project
-#       run: idf.py build
-
-#     - name: Flash and monitor
-#       run: idf.py -p /dev/ttyUSB0 flash monitor
-
-
 jobs:
   build:
 
@@ -44,4 +20,8 @@ jobs:
       with:
         esp_idf_version: v4.4
         target: esp32
-        # path: 'learn-github-actions/'
+    - name: Flash and monitor
+      run: idf.py -p /dev/ttyUSB0 flash monitor
+
+
+
