--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -1,22 +1,22 @@
-name: Build ESP32 Hello World
+name: Build ESP32 Hello World # This is the name of your GitHub Actions workflow.
 run-name: ${{ github.actor }} is learning GitHub Actions
-on:
+on:  #This specifies when the workflow should be triggered
   push:
     branches:
       - main
     
-jobs:
+jobs: #The workflow can have one or more jobs. In this example, there is a single job named "build."
+
   build:
+    runs-on: ubuntu-latest  #This specifies that the job will run on a machine with the latest version of Ubuntu.
 
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout repo
-      uses: actions/checkout@v2
+    steps: #Each job consists of a sequence of steps. These steps define the tasks that will be performed in the job.
+    - name: Checkout repo  #This step checks out the source code of your repository onto the runner.
+      uses: actions/checkout@v2  #The actions/checkout action is commonly used in GitHub Actions workflows to check out the source code of the repository onto the runner (the machine where the workflow is executed). The @v2 specifies that version 2 of this action should be used.
       with:
         submodules: 'recursive'
-    - name: esp-idf build
-      uses: espressif/esp-idf-ci-action@v1
-      with:
-        esp_idf_version: v4.4
-        target: esp32
+    - name: esp-idf build #This line specifies the name of the step, name for identification and display purposes.
+      uses: espressif/esp-idf-ci-action@v1 #a pre-defined action provided by the Espressif team for building projects with the ESP-IDF (Espressif IoT Development Framework). The @v1 specifies that version 1 of this action should be used.
+      with: #This keyword is used to pass input parameters to the action
+        esp_idf_version: v4.4 # This line specifies the version of the ESP-IDF to use
+        target: esp32 #This line specifies the target platform for the build
