--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -8,7 +8,7 @@ on:  #This specifies when the workflow should be triggered
 jobs: #The workflow can have one or more jobs. In this example, there is a single job named "build."
 
   build:
-    runs-on: ubuntu-latest  #This specifies that the job will run on a machine with the latest version of Ubuntu.
+    runs-on: self-hosted #ubuntu-latest  #This specifies that the job will run on a machine with the latest version of Ubuntu.
 
     steps: #Each job consists of a sequence of steps. These steps define the tasks that will be performed in the job.
     - name: Checkout repo  #This step checks out the source code of your repository onto the runner.
