--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -17,8 +17,12 @@ jobs: #The workflow can have one or more jobs. In this example, there is a singl
         submodules: 'recursive'
         ssh-key: ${{ secrets.GH_SSH_PRIVATE_KEY }}
 
-    - name: esp-idf build
-      run: cd ../
+    - name: change path
+      run: cd ../test-github-actions/learn-github-actions/
+    - name: source esp-idf 
+      run: source ./../../esp-idf/export.sh
+    - name: build
+      run: idf.py set-target esp32 build
     #- name: esp-idf build #This line specifies the name of the step, name for identification and display purposes.
      # uses: espressif/esp-idf-ci-action@v1 #a pre-defined action provided by the Espressif team for building projects with the ESP-IDF (Espressif IoT Development Framework). The @v1 specifies that version 1 of this action should be used.
       #with: #This keyword is used to pass input parameters to the action
