--- a/.github/workflows/test-python.yml
+++ b/.github/workflows/test-python.yml
@@ -12,9 +12,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
-          architecture: 'x64'
-      - name: Display Python version
-        run: |
+      - uses: jannekem/run-python-script-action@v1
+        with:
+          script: |
           import os
           import sys
           import errno
