--- a/.github/workflows/test-python.yml
+++ b/.github/workflows/test-python.yml
@@ -15,29 +15,7 @@ jobs:
       - uses: jannekem/run-python-script-action@v1
         with:
           script: |
-          import os
-          import sys
-          import errno
-          import shutil
-          
-          project_name="corfu"
-          
-          # Check for version code argument
-          
-          ###################################### PROJECT CONFIGURATION ###################################################################
-
-          
-          build_command="idf.py clean && idf.py build"
-                   
-          ################################################################################################################################
-          
-
-          print("\nWelcome to the "+ project_name + " project.\n")
-          
-          # Create a git tag with version name into the master branch
-          os.system("git tag " + "1.1")
-          os.system("git push --tag")
-          
-          print("Release Done...!!!")
-          
-          exit(0)
+            import os
+            print("Directory contents:")
+            for f in os.listdir():
+                print(f)
